--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,8 +49,8 @@
         <div class="masthead">
             <ul class="nav nav-pills pull-right">
                 <li class="active"><a href="/">Home</a></li>
-                <li><a href="/static/documentation/">API Documentation</a></li>
-                <li><a href="/static/dumps/">Download dumps</a></li>
+                <li><a href="/documentation/">API Documentation</a></li>
+                <li><a href="/dumps/">Download dumps</a></li>
             </ul>
             <h3 class="muted">Open Onderwijs API</h3>
         </div>
