--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -24,9 +24,15 @@ Found {{ hits.total }} documents in {{ hits.took }}ms. {% if hits.total > 20 %}S
 			<td>{{ hit['_source'].branch_id }}</td>
 			<td>
 				<address>
+				{% if 'name' in hit['_source'] %}
 					<strong><a href="/api/v1/get_document/{{ hit['_index'] }}/{{ hit['_type'] }}/{{ hit['_id'] }}" target="_blank">{{ hit['_source'].name }}</a></strong><br>
+				{% else %}
+					<strong><a href="/api/v1/get_document/{{ hit['_index'] }}/{{ hit['_type'] }}/{{ hit['_id'] }}" target="_blank">{{ hit['_index'] }}/{{ hit['_type'] }}/{{ hit['_id'] }}</a></strong><br>
+				{% endif %}
+				{% if 'address' in hit['_source'] %}
 					{{ hit['_source'].address.street }}<br>
 					{{ hit['_source'].address.zip_code }} {{ hit['_source'].address.city }}<br>
+				{% endif %}
 				</address>
 			</td>
 			<td>{{ hit['_source'].reference_year }}</td>
