Now uses bower for client-side dependencies, upgrade to Bootstrap 3.2.0, fixed some typo's in web interface and changed the README to include bower instructions.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,21 +1,23 @@
 {% extends "base.html" %}
 {% block main %}
-<div class="jumbotron">
-	<form class="form-search" action="/search" method="GET">
-		<div class="input-append">
-			<input name="q" type="text" placeholder="Enter a name, place, zip code or BRIN" class="input-xxlarge search-query">
-			<button type="submit" class="btn">Search</button>
-			</div>
+<div class="">
+	<form role="form" action="/search" method="GET">
+		<div class="input-group input-group-lg">
+			<input name="q" type="search" placeholder="Enter a name, place, zip code or BRIN" class="input-lg form-control search-query">
+			<span class="input-group-btn">
+				<button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span> Search</button>
+			</span>
+		</div>
 	</form>
 </div>
 
 <hr>
 
-<div class="row-fluid marketing">
-	<div class="span4">
+<div class="row marketing">
+	<div class="col-sm-4">
 		<h4>DUO</h4>
 		<ul class="unstyled">
-			<li><span><abbr title="Vestigingen schoolen primair onderwijs">PO School branches</abbr></span></li>
+			<li><span><abbr title="Vestigingen scholen primair onderwijs">PO School branches</abbr></span></li>
 			<ul>
 			{% for year in counts['duo_po_branches']['facets']['years']['terms'] %}
 				<li>
@@ -42,7 +44,7 @@
 				</li>
 			{% endfor %}
 			</ul>
-			<li><span><abbr title="Vestigingen schoolen voortgezet onderwijs">VO School branches</abbr></span></li>
+			<li><span><abbr title="Vestigingen scholen voortgezet onderwijs">VO School branches</abbr></span></li>
 			<ul>
 			{% for year in counts['duo_vo_branches']['facets']['years']['terms'] %}
 				<li>
@@ -80,24 +82,24 @@
 			</ul>
 		</ul>
 	</div>
-	<div class="span4">
+	<div class="col-sm-4">
 		<h4>Onderwijsinspectie</h4>
 		<ul class="unstyled">
 			<li>
-				<span><abbr title="Vestigingen schoolen primair onderwijs">PO School branches</abbr></span>
+				<span><abbr title="Vestigingen scholen primair onderwijs">PO School branches</abbr></span>
 				<span class="badge pull-right">{{ counts['onderwijsinspectie_po_branches']['facets']['doc_types']['total'] }}</span>
 			</li>
 			<li>
-				<span><abbr title="Vestigingen schoolen voortgezet onderwijs">VO School branches</abbr></span>
+				<span><abbr title="Vestigingen scholen voortgezet onderwijs">VO School branches</abbr></span>
 				<span class="badge pull-right">{{ counts['onderwijsinspectie_vo_branches']['facets']['doc_types']['total'] }}</span>
 			</li>
 		</ul>
 	</div>
-	<div class="span4">
+	<div class="col-sm-4">
 		<h4>Venster voor Verantwoording</h4>
 		<ul class="unstyled">
 			<li>
-				<span><abbr title="Vestigingen schoolen voortgezet onderwijs">VO School branches</abbr></span>
+				<span><abbr title="Vestigingen scholen voortgezet onderwijs">VO School branches</abbr></span>
 				<span class="badge pull-right">{{ counts['schoolvo']['facets']['doc_types']['total'] }}</span>
 			</li>
 		</ul>
