--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,25 +4,17 @@
 	<meta charset="utf-8">
 	<title>Open Onderwijs API</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 	<!--[if lt IE 9]>
 		<script src="../assets/js/html5shiv.js"></script>
 	<![endif]-->
-
-	<link href="/static/css/bootstrap.min.css" rel="stylesheet">
-	<link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">
-
+	<link href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 	<style type="text/css">
 		body {
 			padding-top: 20px;
 			padding-bottom: 40px;
 		}
 
-		.container-narrow {
-			margin: 0 auto;
-			max-width: 800px;
-		}
-		.container-narrow > hr {
+		.container > hr {
 		margin: 30px 0;
 		}
 
@@ -41,20 +33,22 @@
 		.marketing p + h4 {
 			margin-top: 28px;
 		}
-		
+
+		.muted {
+			color: #999;
+		}
 	</style>
 </head>
 <body>
-	<div class="container-narrow">
+	<div class="container">
         <div class="masthead">
             <ul class="nav nav-pills pull-right">
                 <li class="active"><a href="/">Home</a></li>
                 <li><a href="/documentation/">API Documentation</a></li>
-                <li><a href="/dumps/">Download dumps</a></li>
             </ul>
             <h3 class="muted">Open Onderwijs API</h3>
         </div>
-        
+
         <hr>
         {% block main %}{% endblock %}
 	</div>
