--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -2,7 +2,7 @@
 
 {% block main %}
 Found {{ hits.total }} documents in {{ hits.took }}ms. {% if hits.total > 20 %}Showing 20 documents.{% endif %}
-<table class="table table-striped">
+<table class="table table-striped table-condensed">
 	<thead>
 		<tr>
 			<th>Index</th>
