mbo objects in app

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -80,6 +80,24 @@
 				</li>
 			{% endfor %}
 			</ul>
+			<li><span><abbr title="Mbo Bevoegde Gezagen">Mbo Boards</abbr></span></li>
+			<ul>
+			{% for year in counts['duo_mbo_boards']['facets']['years']['terms'] %}
+				<li>
+					<span>{{ year['term'] }}</span>
+					<span class="badge pull-right">{{ year['count'] }}</span>
+				</li>
+			{% endfor %}
+			</ul>
+			<li><span><abbr title="Mbo Instellingen">Mbo Institutions</abbr></span></li>
+			<ul>
+			{% for year in counts['duo_mbo_institutions']['facets']['years']['terms'] %}
+				<li>
+					<span>{{ year['term'] }}</span>
+					<span class="badge pull-right">{{ year['count'] }}</span>
+				</li>
+			{% endfor %}
+			</ul>
 		</ul>
 	</div>
 	<div class="col-sm-4">
