--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -44,6 +44,7 @@
         <div class="masthead">
             <ul class="nav nav-pills pull-right">
                 <li class="active"><a href="/">Home</a></li>
+                <li><a href="/extra">Extra</a></li>
                 <li><a href="/documentation/">API Documentation</a></li>
             </ul>
             <h3 class="muted">Open Onderwijs API</h3>
