typo in extra.html

--- a/app/templates/extra.html
+++ b/app/templates/extra.html
@@ -11,7 +11,7 @@
 		<ul>
 			<li>Data from <a href="http://textkernel.com/jobfeed/">TextKernel Jobfeed</a>, the job database for HR professionals.</li>
 			<li>Available to <a href="/jobfeed">search</a> via API and <a href="http://api.openonderwijsdata.nl/sources/jobfeed/jobfeed.schoolchallenge.xml">XML download</a> (>500 mb).</li>
-			<li><a href="http://api.openonderwijsdata.nl/sources/jobfeed/datamodel.xml">Data model (xlsx)</a> and <a href="/documentation/rst/jobs.html">documentation</a>.</li>
+			<li><a href="http://api.openonderwijsdata.nl/sources/jobfeed/datamodel.xlsx">Data model (xlsx)</a> and <a href="/documentation/rst/jobs.html">documentation</a>.</li>
 		</ul>
 	</li>
 </ul>
